<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Mayhem Launcher</string>
    <string name="main_placeholder_clock" translatable="false">00:00</string>
    <string name="main_placeholder_date" translatable="false">Sat, Apr 20</string>

    <string-array name="alignment_format_array">
        <item>left</item>
        <item>center</item>
        <item>right</item>
    </string-array>
    <string-array name="clock_type_array">
        <item>None</item>
        <item>Digital</item>
        <item>Analog 12</item>
        <item>Binary</item>
        <item>Analog 0</item>
        <item>Analog 1</item>
        <item>Analog 2</item>
        <item>Analog 3</item>
        <item>Analog 4</item>
        <item>Analog 6</item>
        <item>Analog 60</item>
    </string-array>
    <string-array name="quick_button_array">
        <item>Show</item>
        <item>Hide</item>
    </string-array>
    <string-array name="search_bar_position_array">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>
    <string-array name="themes_array">
        <item>System default</item>
        <item>Midnight</item>
        <item>Jupiter</item>
        <item>Teal</item>
        <item>Candy</item>
        <item>Pastel</item>
        <item>Noon</item>
        <item>Vlad</item>
        <item>Groovy</item>
    </string-array>
    <string-array name="time_format_array">
        <item>Follow system settings</item>
        <item>24 Hour</item>
        <item>12 Hour</item>
    </string-array>

    <string name="add_apps_fragment_search_apps">Search apps</string>
    <string name="app_info">App Info</string>
    <string name="choose_alignment_dialog_title">Alignment</string>
    <string name="choose_clock_type_dialog_title">Clock Type</string>
    <string name="choose_search_bar_position_dialog_title">Position of Search Field</string>
    <string name="choose_theme_dialog_title">Theme</string>
    <string name="choose_time_format_dialog_title">Time Format</string>
    <string name="content_description_back">Back</string>
    <string name="customise_apps_fragment_add">Add</string>
    <string name="customize_app_drawer_fragment_auto_theme_wallpaper_subtext_no_default_launcher">App needs to be default launcher</string>
    <string name="customize_app_drawer_fragment_auto_theme_wallpaper_text">Set theme background as wallpaper</string>
    <string name="customize_app_drawer_fragment_open_keyboard">Open Keyboard</string>
    <string name="customize_app_drawer_fragment_open_keyboard_subtitle">Display keyboard when showing the app drawer</string>
    <string name="customize_app_drawer_fragment_search_all">Search all apps</string>
    <string name="customize_app_drawer_fragment_search_all_subtitle">Hidden apps can be found when searching</string>
    <string name="customize_app_drawer_fragment_search_bar_position">Position</string>
    <string name="customize_app_drawer_fragment_search_field_options">Search Field Options</string>
    <string name="customize_app_drawer_fragment_search_field_options_subtitle_status_hidden">Search Field is hidden</string>
    <string name="customize_app_drawer_fragment_search_field_options_subtitle_status_shown" formatted="false">%s position, keyboard is %s</string>
    <string name="customize_app_drawer_fragment_show_headings">Show Groupings</string>
    <string name="customize_app_drawer_fragment_show_headings_subtitle">Separate apps into alphabetical groups</string>
    <string name="customize_app_drawer_fragment_show_search_bar">Show Search Field</string>
    <string name="customize_app_drawer_fragment_visible_apps">Visible Apps</string>
    <string name="customize_home">Home Screen</string>
    <string name="hidden">hidden</string>
    <string name="hide_app">Hide App</string>
    <string name="main_date_format">dd EEE, MMM</string>
    <string name="main_fragment_options">Options</string>
    <string name="menu_move_down">Move down</string>
    <string name="menu_move_up">Move up</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_rename">Rename</string>
    <string name="open_app">Open App</string>
    <string name="options_fragment_change_theme">Theme</string>
    <string name="options_fragment_choose_alignment">App Alignment</string>
    <string name="options_fragment_choose_clock_type">Clock Type</string>
    <string name="options_fragment_choose_time_format">Time Format</string>
    <string name="options_fragment_customise_apps">Home Apps</string>
    <string name="options_fragment_customize_app_drawer">Drawer</string>
    <string name="options_fragment_device_settings">Settings</string>
    <string name="options_fragment_change_home_launcher">Change Home Launcher</string>
    <string name="options_fragment_toggle_status_bar">Toggle Status Bar</string>
    <string name="quick_buttons">Quick Buttons</string>
    <string name="quick_buttons_description_center">Settings Quick Button</string>
    <string name="quick_buttons_description_left">Phone Quick Button</string>
    <string name="quick_buttons_description_right">Camera Quick Button</string>
    <string name="rename_app">Rename App</string>
    <string name="shown">shown</string>
    <string name="uninstall">Uninstall</string>
</resources>
