<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_top_large"
    android:layout_marginEnd="@dimen/margin_sides"
    tools:context="com.parthhrana.mayhemlauncher.fragment.CustomizeHomeFragment">

    <ImageView
        android:id="@+id/header_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_back"
        android:padding="@dimen/padding"
        android:paddingStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customize_home"
        android:textAppearance="@style/TextAppearance.Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customise_home_apps_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        tools:itemCount="0"
        tools:listitem="@layout/main_fragment_list_item" />

    <LinearLayout
        android:id="@+id/add_home_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_list_items_top"
        android:background="@drawable/imageview_border"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customise_home_apps_list">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:paddingEnd="0dp"
            android:text="+"
            android:textAppearance="@style/TextAppearance.Primary.XL"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/customise_apps_fragment_add"
            android:textAppearance="@style/TextAppearance.Primary.XL" />
    </LinearLayout>

    <ImageView
        android:id="@+id/quick_button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sides_small"
        android:contentDescription="@string/quick_buttons_description_left"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_call" />

    <ImageView
        android:id="@+id/quick_button_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sides_small"
        android:alpha="1"
        android:contentDescription="@string/quick_buttons_description_center"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quick_button_right"
        app:layout_constraintStart_toEndOf="@+id/quick_button_left"
        app:srcCompat="@drawable/ic_cog" />

    <ImageView
        android:id="@+id/quick_button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sides_small"
        android:contentDescription="@string/quick_buttons_description_right"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_photo_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>
