<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_top_large"
    android:layout_marginEnd="@dimen/margin_sides"
    tools:context="com.parthhrana.mayhemlauncher.fragment.CustomizeSearchFieldFragment">

    <ImageView
        android:id="@+id/header_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_back"
        android:padding="@dimen/padding"
        android:paddingStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customize_app_drawer_fragment_search_field_options"
        android:textAppearance="@style/TextAppearance.Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/header_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_sides_small"
        android:layout_marginTop="@dimen/margin_top"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_bottom_large">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/show_search_field_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customize_app_drawer_fragment_show_search_bar"
                android:textAppearance="@style/TextAppearance.Primary.Large"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_field_position_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_search_bar_position"
                android:textAppearance="@style/TextAppearance.Primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_search_field_switch" />

            <TextView
                android:id="@+id/search_field_position_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_field_position_title" />

            <TextView
                android:id="@+id/open_keyboard_switch_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_open_keyboard"
                android:textAppearance="@style/TextAppearance.Primary"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/open_keyboard_switch_toggle"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_field_position_subtitle" />

            <TextView
                android:id="@+id/open_keyboard_switch_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/customize_app_drawer_fragment_open_keyboard_subtitle"
                android:textAppearance="@style/TextAppearance.Hint"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/open_keyboard_switch_toggle"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/open_keyboard_switch_title" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/open_keyboard_switch_toggle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/open_keyboard_switch_title"
                app:layout_constraintBottom_toBottomOf="@id/open_keyboard_switch_subtitle" />

            <TextView
                android:id="@+id/search_all_switch_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_search_all"
                android:textAppearance="@style/TextAppearance.Primary"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/open_keyboard_switch_toggle"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/open_keyboard_switch_subtitle" />

            <TextView
                android:id="@+id/search_all_switch_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/customize_app_drawer_fragment_search_all_subtitle"
                android:textAppearance="@style/TextAppearance.Hint"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/open_keyboard_switch_toggle"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_all_switch_title" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/search_all_switch_toggle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_all_switch_title"
                app:layout_constraintBottom_toBottomOf="@id/search_all_switch_subtitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>